# axum-reqwest-hello_world

./: Cargo.toml  README.md
src/: api.rs  main.rs  states.rs
