[package]
name = "seed-axum_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
axum-macros = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", features = ["full"] }
tower-http = { version = "0.5.2" }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
hyper = "1.2.0"
hyper-tls = "0.6.0"
